--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,4 @@ gunicorn ==21.2.0
 Flask==3.0.3
 requests ==2.31.0
 beautifulsoup4 ==4.12.3
-chromium==0.0.0
-chromedriver==2.24.1
-selenium==4.1.0
+tweepy=4.14.0
